added log level processing via template